Add more content

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -53,15 +53,12 @@ ul {
   padding: 0;
 }
 
+.section-title {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
 .sketch {
-  position: absolute;
-
-  &__red-wine-glass {
-    left: $space-base;
-  }
-
-  &__grapes {
-    right: $space-base;
-    transform: rotate(5deg)
-  }
+  margin-bottom: 2rem;
 }
