--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,10 @@
 <h1>Wine Guide</h1>
 
-<p>This is a very over generalized guide made based on personal opinion. Please take recommendations with a grain of salt!</p>
+<p>This is an overly generalized guide made based on personal opinion. Please take recommendations with a grain of salt!</p>
 
-<p>The content is based on what you might commonly see on wine labels in a store with a standard selection.</p>
+<p><strong>This site is the accompaniment to some short presentations I gave:</strong></p>
+<p><a href="https://docs.google.com/presentation/d/1-yQM3tZGTXsDrcXXo-ws5MZ-R3WfkSyyc0Fpv39RrJY/edit?usp=sharing" target="blank">What Wine Should I Buy Tonight?</a>
+<p><a href="https://docs.google.com/presentation/d/1IFrSiVBjSkX27ROLT_Vcxq9hKn2tf5Xu1b7b_zSueww/edit?usp=sharing" target="blank">About Natural Wine</a>
 
 <% data.wines.categories.each do |category| %>
 
