Update content to include guidelines on natural wine, update presentation link, some CSS updates

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
 
 <p><strong>This site is the accompaniment to some short presentations I gave:</strong></p>
 <p><a href="https://docs.google.com/presentation/d/1-yQM3tZGTXsDrcXXo-ws5MZ-R3WfkSyyc0Fpv39RrJY/edit?usp=sharing" target="blank">What Wine Should I Buy Tonight?</a>
-<p><a href="https://docs.google.com/presentation/d/1IFrSiVBjSkX27ROLT_Vcxq9hKn2tf5Xu1b7b_zSueww/edit?usp=sharing" target="blank">About Natural Wine</a>
+<p><a href="https://drive.google.com/file/d/1VCSE84ERs6Sz0jJgAHMR0_XVCwLywX2Y/view?usp=sharing" target="blank">About Natural Wine</a>
 
 <% data.wines.categories.each do |category| %>
 
@@ -20,3 +20,5 @@
     <% end %>
   <% end %>
 <% end %>
+
+<footer><small>Created by Vendela · Updated 2025</small><footer>
